SSAO orthographic camera viewport render bug #44133

Closed
opened 2015-03-25 14:42:12 +01:00 by Wassili F · 7 comments

System Information
Windows 8.1 nvidia Gtx 670

Blender Version
Broken: (2.74 RC 2 - 2.74.2 87cff57

Short description of error
SSAO not working when openGL-rendering the viewport through an ortographic camera. (works in viewport)

Exact steps for others to reproduce the error

hit the opengl vieport render button through an othographic camera, and the ambient occlusion will not render.

while normal ortographic vieport (when not looking through camera) or a perpective camera will render as expected. SSAO_perspective_cam.blend

**System Information** Windows 8.1 nvidia Gtx 670 **Blender Version** Broken: (2.74 RC 2 - 2.74.2 87cff57 **Short description of error** SSAO not working when openGL-rendering the viewport through an ortographic camera. (works in viewport) **Exact steps for others to reproduce the error** hit the opengl vieport render button through an othographic camera, and the ambient occlusion will not render. while normal ortographic vieport (when not looking through camera) or a perpective camera will render as expected. [SSAO_perspective_cam.blend](https://archive.blender.org/developer/F154973/SSAO_perspective_cam.blend)
Author

Changed status to: 'Open'

Changed status to: 'Open'
Antonis Ryakiotakis was assigned by Wassili F 2015-03-25 14:42:12 +01:00
Author

Added subscriber: @astroblitz

Added subscriber: @astroblitz

Confirmed, checking

Confirmed, checking

This issue was referenced by 4fd2f678ea

This issue was referenced by 4fd2f678ea07fcd69dffce10fbfd0b19ccdc3782

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'

Closed by commit 4fd2f678ea.

Closed by commit 4fd2f678ea.

This issue was referenced by b2a3796b2d

This issue was referenced by b2a3796b2d4e44890810f5204cd4209b64238ad0
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#44133
No description provided.