Fix T44133 SSAO in OpenGL rendering from orthographic camera did not work

Safe to include in final release